--- a/package.json
+++ b/package.json
@@ -34,6 +34,8 @@
     "angular-bootstrap-md": "^12.2.0",
     "assert": "^2.0.0",
     "async": "^3.2.3",
+    "bignumber.js": "^9.1.1",
+    "bn.js": "^5.2.1",
     "chart.js": "^3.7.1",
     "crypto-browserify": "^3.12.0",
     "ganache-cli": "^6.12.2",
