need to make look up provider less.

--- a/angular.json
+++ b/angular.json
@@ -37,13 +37,13 @@
               "budgets": [
                 {
                   "type": "initial",
-                  "maximumWarning": "100kB",
-                  "maximumError": "5Mb"
+                  "maximumWarning": "5Mb",
+                  "maximumError": "10Mb"
                 },
                 {
                   "type": "anyComponentStyle",
-                  "maximumWarning": "100kB",
-                  "maximumError": "5Mb"
+                  "maximumWarning": "5Mb",
+                  "maximumError": "10Mb"
                 }
               ],
               "fileReplacements": [
